[package]
name = "axum-htpasswd"
version = "0.1.0"
edition = "2021"

authors = ["Sebastian Schäfer <sarek@uliweb.de>"]
description = "Simple file-based authentication in Axum"
homepage = "https://github.com/Sarek/axum-htpasswd"
repository = "https://github.com/Sarek/axum-htpasswd"
license = "MIT"
categories = ["web-programming"]

[dependencies]
axum = { version = "0.6", features = ["headers"] }
base64 = "0.21"
http-body = "0.4"
log = { version = "0.4", features = ["std"] }
tokio = { version = "1.33.0", features = ["fs", "io-std"] }
tower-http = { version = "0.4", features = ["full"] }
