[package]
name = "axum-htpasswd"
version = "0.1.0"
edition = "2021"

description = "Simple file-based authentication in Axum"
homepage = "https://github.com/Sarek/axum-htpasswd"
repository = "https://github.com/Sarek/axum-htpasswd"
license = "MIT"
categories = ["web-programming::http-server"]
keywords = ["http", "web", "authentication"]
readme = "README.md"

[dependencies]
argon2 = { version = "0.5.3", features = ["rand"] }
axum = { version = "0.7" }
base64 = "0.21"
clap = { version = "4.5", features = ["derive"], optional = true }
http-body = "1.0"
log = { version = "0.4", features = ["std"] }
password-hash = { version = "0.5.0", features = ["getrandom"] }
rpassword = { version = "7.3.1", optional = true }
scrypt = "0.11.0"
text_io = "0.1.12"
tokio = { version = "1.33.0", features = ["fs", "io-std", "macros"] }
tower-http = { version = "0.5", features = ["full"] }

[dev-dependencies]
tempfile = "3.9.0"
simple_logger = { version = "4.3", features = ["stderr"] }

[features]
cli = ["clap", "rpassword"]
